as much as i can do in 8 hours

--- a/src/app/feature/header/container/header-container.component.html
+++ b/src/app/feature/header/container/header-container.component.html
@@ -1,3 +1,8 @@
 <div class="app-header">
-  Header
+  <div class="app-header__heading">
+    <app-heading [text]="translate.heading"></app-heading>
+  </div>
+  <div class="app-header__user">
+    <app-user-container></app-user-container>
+  </div>
 </div>
