--- a/src/app/route/list/component/list-item/list-item.component.sass
+++ b/src/app/route/list/component/list-item/list-item.component.sass
@@ -1,2 +1,7 @@
+// TODO: need to add to global variables so we dont need '../../'
+@import '../../../../../assets/style/variables/index'
+@import '../../../../../assets/style/mixins'
+
 .app-list-item
-  color: blue
+  color: $cTextPrimary
+  padding: $spacePrimary
