--- a/src/app/route/list/container/list-container.component.html
+++ b/src/app/route/list/container/list-container.component.html
@@ -1,12 +1,21 @@
 <div class="app-list-container">
   <div class="app-list-container__heading">
-    <app-heading [text]="headingText"></app-heading>
+    <app-heading [text]="translate.heading"></app-heading>
   </div>
-  <ul class="app-list-container__item-list">
+  <div
+    *ngIf="!(itemList$ | async)"
+    class="app-list-container__loading">
+    <app-loading></app-loading>
+  </div>
+  <!-- TODO: would use infinite scroll lib here, so that we dont call all the data at once -->
+  <ul
+    *ngIf="(itemList$ | async)"
+    class="app-list-container__item-list">
     <li
       class="app-list-container__item-list-item"
-      *ngFor="let item of items">
-      <app-list-item [listItem]="item"></app-list-item>
+      *ngFor="let item of (itemList$ | async)">
+      <app-list-item [listItem]="item" (onItemLick)="handleOnItemClick($event)"
+                     [listItemActionText]="translate.itemActionText"></app-list-item>
     </li>
   </ul>
 </div>
