--- a/src/app/shared/image/image.component.sass
+++ b/src/app/shared/image/image.component.sass
@@ -1,5 +1,13 @@
+// TODO: need to add to global variables so we dont need '../../'
+@import '../../../assets/style/variables/index'
+@import '../../../assets/style/mixins'
+
 .app-image
   width: 100px
+  height: 100px
+  overflow: hidden
+  border: 1px solid $bdcPrimary
+  border-radius: $bdrsPrimary
 
   img
     max-width: 100%
