--- a/src/app/shared/heading/heading.component.sass
+++ b/src/app/shared/heading/heading.component.sass
@@ -1,2 +1,6 @@
+// TODO: need to add to global variables so we dont need '../../'
+@import '../../../assets/style/variables/index'
+@import '../../../assets/style/mixins'
+
 .app-heading
-  color: green
+  color: $cHeadingPrimary
